--- a/05_CSS_Selectors/index.html
+++ b/05_CSS_Selectors/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Selectors</title>
-
+    <!-- order matters and will apply app.css, then more_styles.css -->
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="more_styles.css">
 </head>
